[package]
name = "dynamic-flows-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
num-traits = "0.2.15"
syn = "2.0.28"
ordered-float = "3.7.0"
itertools = "0.11.0"
plotters = "0.3.5"
priority-queue = "1.3.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
